--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,13 +16,41 @@
 </div>
 </div>
 <div>
-  <li>
-    {{name}}
-
-    <button class="add-burger" data-id="{{id}}" data-newBurger="{{devoured}}">
-      {{#if devoured}}Burger Devoured!{{else}}Eat It!{{/if}}
-    </button>
-
-    <button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
-  </li>
-</div>
+  <div class="row">
+    <!-- Undevoured Burgers -->
+    <div class="col-sm-6">
+      <div class="panel panel-default">
+        <div class="panel-heading" id="lefthead"><strong>New Burgers</strong></div>
+        <div class="panel-body">
+          <ul>
+            {{#each burgers}}
+            {{#unless devoured}}
+            <span><strong> {{this.id}} - {{this.burger_name}} </strong></span>
+            <button type="button" class="devour-burger btn btn-warning" id="eatbutton" data-id="{{this.id}}"
+              data-newDevoured="{{devour}}"><i class="fas fa-utensils"></i></button>
+            <hr>
+            {{/unless}}
+            {{/each}}
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- Devoured Burgers -->
+    <div class="col-sm-6">
+      <div class="panel panel-default">
+        <div class="panel-heading" id="righthead"><strong>Devoured Burgers</strong></div>
+        <div class="panel-body">
+          <ul>
+            {{#each burgers}}
+            {{#if devoured}}
+            <span><strong> {{this.id}} - {{this.burger_name}} </strong></span>
+            <button type="button" class="delete-burger btn btn-danger" data-id="{{this.id}}"
+              data-newDevoured="{{devour}}"><i class="fas fa-trash-alt"></i></button>
+            <hr>
+            {{/if}}
+            {{/each}}
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
