--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,10 +17,9 @@
 </div>
 <div>
   <div class="row">
-    <!-- Undevoured Burgers -->
     <div class="col-sm-6">
       <div class="panel panel-default">
-        <div class="panel-heading" id="lefthead"><strong>New Burgers</strong></div>
+        <div class="panel-heading"><strong><u>New Burgers</u></strong></div>
         <div class="panel-body">
           <ul>
             {{#each burgers}}
@@ -35,10 +34,9 @@
         </div>
       </div>
     </div>
-    <!-- Devoured Burgers -->
     <div class="col-sm-6">
       <div class="panel panel-default">
-        <div class="panel-heading" id="righthead"><strong>Devoured Burgers</strong></div>
+        <div class="panel-heading"><strong><u>Devoured Burgers</u></strong></div>
         <div class="panel-body">
           <ul>
             {{#each burgers}}
